<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/recent_searches_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"
        android:paddingTop="64dp"
        android:paddingBottom="64dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_searches_title"
                android:paddingStart="@dimen/general_margin"
                android:paddingEnd="@dimen/general_margin"
                android:paddingTop="@dimen/general_margin"
                android:paddingBottom="@dimen/general_margin"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recent_searches_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="56dp"
                android:paddingStart="@dimen/general_margin"
                android:paddingEnd="@dimen/general_margin"
                android:paddingBottom="@dimen/general_margin"/>

            <TextView
                android:id="@+id/no_searches_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_recent_searches"
                android:paddingTop="56dp"
                android:paddingStart="@dimen/general_margin"
                android:paddingEnd="@dimen/general_margin"
                android:paddingBottom="@dimen/general_margin"
                android:visibility="gone"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/search_results_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"
        android:paddingTop="64dp"
        android:paddingBottom="64dp"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <TextView
                android:id="@+id/search_results_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/general_margin"
                android:paddingEnd="@dimen/general_margin"
                android:paddingTop="@dimen/general_margin"
                android:paddingBottom="@dimen/general_margin"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_results_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="56dp"
                android:paddingStart="@dimen/general_margin"
                android:paddingEnd="@dimen/general_margin"
                android:paddingBottom="@dimen/general_margin" />

            <TextView
                android:id="@+id/no_results_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_search_results"
                android:paddingTop="56dp"
                android:paddingStart="@dimen/general_margin"
                android:paddingEnd="@dimen/general_margin"
                android:paddingBottom="@dimen/general_margin"
                android:visibility="gone"/>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>